ailin- working on tktpage - public folder created

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -57,7 +57,7 @@ button {
 }
 
 .heroBg {
-  background-image: url("../assets/wavy-banner2.png");
+  background-image: url("/wavy-banner2.png");
   clip-path: polygon(
     100% 0%,
     0% 0%,
