Fixed ticketCard json issue and added som sass

--- a/src/scss/_landPage.scss
+++ b/src/scss/_landPage.scss
@@ -1,10 +1,8 @@
-@import "./config.modules";
-
-
+@import "./config";
 .lineupTxt {
     font-family: $body-font;
     color: white;
     background: $orange-gradient;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-  }
+}
