minor sass change to lineUp

--- a/src/scss/sections/_lineup.scss
+++ b/src/scss/sections/_lineup.scss
@@ -1,8 +1,7 @@
 //  @import "../config";
 .lineupTxt {
     font-family: $bodyFont;
-    // color: hotpink;
     background: $orangeGradient;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: white;
+    -webkit-text-fill-color: transparent;
 }
