Added signup folder  (signupComp) with changing cards, breadcrumb and checkboxhandler

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -30,6 +30,7 @@
 // $orange: #dc6940;
 @import "config";
 @import "./sections/lineup";
+@import "./sections/ticketForm";
 body {
     margin: 0;
     box-sizing: border-box;
