Checkbox switch working + counter added + update state of formdata

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -32,6 +32,7 @@
 @import "./sections/lineup";
 @import "./sections/ticketForm";
 @import "./sections/drawborder";
+@import "./global/counter";
 body {
     margin: 0;
     box-sizing: border-box;
