--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -34,6 +34,7 @@
 @import "./artist/artistcard.scss";
 @import "./grids/artistgrid.scss";
 @import "./header/header.scss";
+@import "./landingPage/banner.scss";
 
 
 
