--- a/src/scss/artist/artistcard.scss
+++ b/src/scss/artist/artistcard.scss
@@ -1,34 +1,46 @@
-
 .artistCard {
-    background-image: var(--img);
-    background-color: none;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    border: none;
-    border-radius: $card-border;
-    height: 40vh;
-    min-width: 20vw;
-    max-width: 20vw;
-    // text-overflow: ellipsis;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    box-shadow: $card-shadow;
-  
-    h3 {
-      color: white;
-      text-transform: uppercase;
-      text-align: center;
-      opacity: 0;
-      transition: opacity 0.7s;
-    }
-    &:hover {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.13), rgb(0, 0, 0)),
-        var(--img);
-      box-shadow: $hov-card-sh;
-    }
-    &:hover h3 {
-      opacity: 1;
-    }
+  background-color: rgb(0, 0, 0);
+  border: none;
+  border-radius: $card-border;
+  height: 40vh;
+  min-width: 20vw;
+  max-width: 20vw;
+  // text-overflow: ellipsis;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+  // justify-content: flex-end;
+  box-shadow: $card-shadow;
+  position: relative;
+
+  h3 {
+    color: white;
+    text-transform: uppercase;
+    // text-align: center;
+    font-size: 1.5rem;
+   bottom: 3%;
+    opacity: 0;
+    transition: opacity 0.7s;
+    position: absolute;
   }
+  .artistImg {
+    height: 100%;
+  }
+  .artistPng {
+    width: 100%;
+    background-color: white;
+  }
+  &:hover {
+    box-shadow: $hov-card-sh;
+  }
+  &:hover h3 {
+    opacity: 1;
+  }
+  &:hover img {
+    opacity: 0.4    ;
+  
+  }
+}
+
