--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -1,6 +1,6 @@
 
 
-@import "./config.modules";
+@import "./config";
 @import "./UI/buttons.scss";
 @import "./tickets/tickets.scss";
 @import "./artist/artistcard.scss";
