--- a/src/scss/sections/_ticketForm.scss
+++ b/src/scss/sections/_ticketForm.scss
@@ -20,8 +20,8 @@
 }
 
 .form-container {
-    width: 30vw;
-    height: 40vh;
+    width: auto;
+    height: auto;
     background-color: $dark-poster;
     border-radius: 10px;
     box-shadow: $card-shadow;
