--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -1,4 +1,4 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 @import "./config";
 @import "./UI/buttons.scss";
@@ -7,8 +7,6 @@
 @import "./grids/artistgrid.scss";
 @import "./header/header.scss";
 @import "./landingPage/banner.scss";
-
-
 
 //GLOBAL STYLING
 
@@ -50,27 +48,25 @@ button {
 
   &.secBtn {
     text-transform: uppercase;
-      font-size: 1.3rem;
-      background: none;
-      border: none;
-      color: white;
-      &::after {
-        max-width: 100%;
-        height: 0.5rem;
-        display: block;
-        content: "";
-        background: $orange-gradient;
-        opacity: 1;
-        margin-bottom: -6px;
-        margin-top: 1px;
-      }
-       &:hover::after {
-        background: $hover-gradient;
-      }
+    font-size: 1.3rem;
+    background: none;
+    border: none;
+    color: white;
+    &::after {
+      max-width: 100%;
+      height: 0.5rem;
+      display: block;
+      content: "";
+      background: $orange-gradient;
+      opacity: 1;
+      margin-bottom: -6px;
+      margin-top: 1px;
+    }
+    &:hover::after {
+      background: $hover-gradient;
+    }
   }
-  
 }
-
 
 .heroTitle {
   font-family: $display-font;
