--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -28,19 +28,12 @@
 // $yellow: #e89832;
 // $orange: #dc6940;
 
-@import "./config.modules";
+@import "./config";
 @import "./UI/buttons.scss";
 @import "./tickets/tickets.scss";
 @import "./artist/artistcard.scss";
 @import "./grids/artistgrid.scss";
 @import "./header/header.scss";
-
-
-
-
-
-
-
 
 //GLOBAL STYLING
 
@@ -82,25 +75,24 @@ button {
 
   &.secBtn {
     text-transform: uppercase;
-      font-size: 1.3rem;
-      background: none;
-      border: none;
-      color: white;
-      &::after {
-        max-width: 100%;
-        height: 0.5rem;
-        display: block;
-        content: "";
-        background: $orange-gradient;
-        opacity: 1;
-        margin-bottom: -6px;
-        margin-top: 1px;
-      }
-       &:hover::after {
-        background: $hover-gradient;
-      }
+    font-size: 1.3rem;
+    background: none;
+    border: none;
+    color: white;
+    &::after {
+      max-width: 100%;
+      height: 0.5rem;
+      display: block;
+      content: "";
+      background: $orange-gradient;
+      opacity: 1;
+      margin-bottom: -6px;
+      margin-top: 1px;
+    }
+    &:hover::after {
+      background: $hover-gradient;
+    }
   }
-  
 }
 
 // .primBtn {
@@ -122,8 +114,6 @@ button {
 //   }
 
 // }
-
-
 
 // .secBtn {
 //   text-transform: uppercase;
@@ -147,7 +137,6 @@ button {
 //     background: $hover-gradient;
 //   }
 // }
-
 
 //REGULAR APP LAND PAGE
 
@@ -296,8 +285,6 @@ button {
 //   padding-bottom: 5rem;
 // }
 
-
-
 .carrousel {
   display: flex;
   justify-content: center;
@@ -354,7 +341,6 @@ button {
 //     box-shadow: $hov-card-sh;
 //   }
 
-  
 //   .ticketTitle {
 //     background-image: linear-gradient(rgba(0, 0, 0, 0.13), rgb(0, 0, 0)),
 //       url("https://faellestival.dk/wp/wp-content/uploads/2018/09/cropped-MG_8034-1.jpg");
