in progress - stylling

--- a/src/scss/landingPage/banner.scss
+++ b/src/scss/landingPage/banner.scss
@@ -1,3 +1,22 @@
+.heroSection{
+  height: 100vh;
+}
+
+.Timer{
+  display: flex;
+}
+
+.heroText{
+  display: flex;
+}
+
+.btnGrid{
+ display: flex;
+ justify-content: space-evenly;
+}
+
+
+
 .bannerSection {
   background-color: black;
   display: flex;
