--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -35,7 +35,9 @@
 @import "./artist/artistcard.scss";
 @import "./grids/artistgrid.scss";
 @import "./header/header.scss";
-@import "./landingPage/banner.scss";
+@import "./landingPage/HeroSection.scss";
+@import "./landingPage/lineupSection.scss";
+
 
 //GLOBAL STYLING
 
