--- a/src/scss/UI/buttons.scss
+++ b/src/scss/UI/buttons.scss
@@ -68,3 +68,23 @@
     display: none;
   }
   
+
+  @media only screen and (max-width: 800px) {
+    .burgerBtn {
+      display: block;
+      position: absolute;
+      z-index: 100;
+      top: 2vw;
+      right: 2vw;
+      width: 2rem;
+      height: 2rem;
+
+     
+    }
+
+
+  #festApp{
+    display: none;
+  }
+  }
+  
