--- a/src/scss/landingPage/lineupSection.scss
+++ b/src/scss/landingPage/lineupSection.scss
@@ -4,7 +4,7 @@
   }
 
   span:nth-child(-n + 3) {
-    font-size: 5rem;
+    font-size: clamp(3.5rem, 5.5vw, 5rem); 
   }
   span:nth-child(3)::after {
     content: "\a";
@@ -13,7 +13,7 @@
 }
 
 span:nth-child(n + 4) {
-  font-size: 3rem;
+    font-size: clamp(2.5rem, 3.5vw, 3rem); 
 }
 
 span:nth-child(8)::after {
@@ -22,7 +22,7 @@ span:nth-child(8)::after {
 }
 
 span:nth-child(n + 9) {
-  font-size: 1.5rem;
+    font-size: clamp(1.5rem, 1.5vw, 2rem); 
   // &::after {
   //     content: "\a";
   //     white-space: pre;
