playing now working just needs styling

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -36,6 +36,7 @@
 @import "./grids/artistgrid.scss";
 @import "./header/header.scss";
 @import "./landingPage/banner.scss";
+@import "./festApp/cards.scss";
 
 //GLOBAL STYLING
 
