stylling for Landing page

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -31,12 +31,13 @@
 
 @import "./config";
 @import "./UI/buttons.scss";
-@import "./tickets/tickets.scss";
+@import "./ticketPage/tickets.scss";
 @import "./artist/artistcard.scss";
 @import "./grids/artistgrid.scss";
 @import "./header/header.scss";
 @import "./landingPage/HeroSection.scss";
 @import "./landingPage/lineupSection.scss";
+@import "./landingPage/faqSection.scss";
 
 
 //GLOBAL STYLING
