program working, needs styling

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -37,6 +37,7 @@
 @import "./header/header.scss";
 @import "./landingPage/banner.scss";
 @import "./festApp/cards.scss";
+@import "./festApp/program.scss";
 
 //GLOBAL STYLING
 
