artist header img fixed

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -33,6 +33,7 @@
 @import "./UI/buttons.scss";
 @import "./tickets/tickets.scss";
 @import "./artist/artistcard.scss";
+@import "./artist/artistPage.scss";
 @import "./grids/artistgrid.scss";
 @import "./header/header.scss";
 @import "./landingPage/banner.scss";
