--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -40,7 +40,7 @@
 @import "./landingPage/lineupSection.scss";
 @import "./landingPage/faqSection.scss";
 
-@import "./landingPage/banner.scss";
+// @import "./landingPage/banner.scss";
 @import "./festApp/cards.scss";
 @import "./festApp/program.scss";
 @import "./landingPage/faq-page.scss";
