--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -34,6 +34,7 @@
 @import "./ticketPage/tickets";
 @import "./artist/artistcard";
 @import "./grids/artistgrid";
+@import "./artist/artistPage";
 @import "./header/header";
 @import "./festApp/cards";
 @import "./festApp/program";
