--- a/src/scss/landingPage/HeroSection.scss
+++ b/src/scss/landingPage/HeroSection.scss
@@ -3,6 +3,7 @@
   display: grid;
 }
 
+
 .heroTitle {
   font-family: $display-font;
   // font-size: 6rem;
@@ -10,6 +11,16 @@
   text-align: center;
   margin-top: 0;
 }
+
+.clock{
+  display: flex;
+  justify-content: center;
+  gap: 5vw;
+  font-size: 1.8rem;
+font-weight: 600;
+
+}
+
 
 .heroBg {
   background-image: url("/wavy-banner2.png");
@@ -121,7 +132,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 22vw;
+  height: 20vw;
 }
 
 .Timer {
@@ -131,6 +142,7 @@
 
 .heroTxt {
   display: flex;
+  font-size: 1.2rem;
   justify-content: center;
 }
 
