lineup stylling done

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -45,6 +45,8 @@
 @import "./landingPage/lineupSection";
 @import "./landingPage/faqSection";
 @import "./landingPage/faq-page";
+@import "./lineupPage/lineupCards.scss";
+
 // @import "./artist/artistpage";
 
 //GLOBAL STYLING
